--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Note Taker</title>
+  <link rel="icon" href="./assets/images/notes.png"/>
+  <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
+  <link rel="stylesheet" href="./assets/css/bootstrapmods.css">
 </head>
 <body>
-  <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Note Taker
+  <nav class="navbar navbar-light bg-dark">
+    <a class="handwriting-font navbar-brand font-weight-bold" href="/">Note Taker
     </a>
   </nav>
   <div class="container">
     <div style="margin-top: 80px;" class="jumbotron text-center">
-      <h1 class="display-4">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
+      <h1 class="display-4">Note Taker <span role="img" aria-label="Memo"><img src="./assets/images/notes.png" width= "75" alt="notepad"></span></h1>
       <h4 class="mt-4">Take notes with Express</h4>
       <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
     </div>
