--- a/public/notes.html
+++ b/public/notes.html
@@ -5,30 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Note Taker</title>
+  <link rel="icon" href="./assets/images/notes.png"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="./assets/css/bootstrapmods.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Note Taker
+  <nav class="navbar navbar-light bg-dark">
+    <a class="handwriting-font navbar-brand font-weight-bold" href="/">Note Taker
     </a>
     <div class="icons">
-      <i class="fas fa-save text-light save-note"></i>
-      <i class="fas fa-pen text-light new-note"></i>
+      <i class="fas fa-save text-dark save-note"></i>
+      <i class="fas fa-pen text-dark new-note"></i>
     </div> 
   </nav>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-4 list-container">
+      <div class="col-sm-3 list-container">
         <div class="card">
           <ul class="list-group">
           </ul>
         </div>
       </div>
-      <div class="col-8">
+      <div class="col-sm-8">
         <input class="note-title" placeholder="Note Title" maxlength="28" type="text"/>
         <textarea class="note-textarea" placeholder="Note Text"></textarea>
       </div>
